@@ -1,4 +1,4 @@
-#define EV_MINIMAL 1
+#define EV_MINIMAL 2
 #define EV_USE_POLL 0
 #define EV_USE_INOTIFY 0
 #define EV_USE_EVENTFD 0
@@ -12,5 +12,11 @@
 #define EV_MINPRI 0
 #define EV_MAXPRI 0
 #define EV_USE_STDEXCEPT 0
+
+#include <config.h>
+
+#if !ENABLE_FRILLS
+# define NDEBUG
+#endif
 
 #include "ev++.h"
